styles/styles.css
/*Css for all the pages*/
body {
  background-image: url("/images/background.jpg");
  background-attachment: fixed;
  background-size: cover;
  font-family: 'Poppins', sans-serif
}

p {
  font-weight: 200;
  font-size: 3vh;
  color: #fff;
}

ul {
padding-left: 5%;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.77);
  background-size: cover;
  z-index: -1;
}

/*Menu CSS*/
#logo {
  width: 9.5vh;
  height: 11.5vh;
  margin-top: 3%;
  margin-left: 5%;
  margin-bottom: 0px;
}

#menu-img{
  width: 7vh;
  height: 7vh;
  position: absolute;
  right: 75px;
  margin-top: 3.5%;
  animation-duration: 0.5s;
  animation-name: menu-rotation;
  animation-timing-function: ease-out;
  animation-play-state: paused;
  animation-fill-mode: forwards;
}

@keyframes menu-rotation {
  from {
    transform: rotate(0deg);
    opacity: 1;
  }

  to {
    transform: rotate(180deg);
    opacity: 0;
  }
}

.menu {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 1;
  visibility: hidden;
  background: rgba(44, 44, 44, 0.97);
  text-align: center;
  padding-top: 15%;
  z-index: 2;
}

.menu.show {
  visibility: visible;
  animation-duration: 0.5s;
  animation-name: slidein;
  animation-timing-function: ease-out;
  animation-play-state: running;
  animation-fill-mode: forwards;
}

@keyframes slidein {
  from {
    transform: translate3d(100%,0,0);
  }

  to {
    transform: translate3d(0,0,0);
  }
}

.menu-nav {
  list-style: none;
  padding-left: 0;
}

.nav-link {
  font-family: 'Poppins', sans-serif;
  font-size: 6vh;
  color: #fff;
}

.nav-link:hover {
  color: #eece1a;
}

/*Home page CSS (Index.html)*/
#name-container {
  margin-top: 5%;
  margin-left: 4%;
}

.name {
  font-weight: 600;
  font-size: 5em;
  color: #fff;
}
  
#myname {
  color: #eece1a;
}

.btn-outline-warning {
  width: 30vh;
  height: 8vh;
  margin-top: 3.5%;
  font-family: 'Poppins', sans-serif;
  font-size: 4vh;
}

#hire-me {
  margin-left: 2%;
}

/*About Me Page CSS (about.html)*/
#aboutme-skills-container {
  margin-right: 4%;
  margin-left: 4%;
  margin-top: 2%;
}

#aboutme-container {
  border-right-color: #eece1a;
  border-right-style: dashed;
}
  
#aboutme-title {
  font-weight: 600;
  font-size: 9.5vh;
  color: #eece1a;
}

#aboutme-text {
  padding-right: 20%;
  padding-top: 5%;
}

#aboutme-contactme {
  color: #fff;
}
  
#aboutme-contactme:hover {
  color: #eece1a;
}

#skills-container {
  padding-left: 2%;
}

#skill-title-container {
  text-align: center;
  margin-bottom: 25px;
}

#skills-title {
  font-weight: 600;
  font-size: 9.5vh;
  color: #eece1a;
}

.skill {
  margin-bottom: 15px;
}

.skill-title {
  font-weight: 200;
  color: #fff;
}

.skill-img {
  width: 45px;
  height: 45px;
}

.progress {
  height: 50px;
  background-color: #fff;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.progress-bar {
  background-color: #eece1a;
  font-family: 'Poppins', sans-serif;
  font-size: 3.5vh;
}

/*My Work Page CSS (proyects.html)*/
#proyects-container {
  margin-top: 3.5%;
}

.card {
  background-color: transparent;
  border-style: solid;
  border-color: #eece1a;
  border-width: 2px;
}

.card-title {
  color: #eece1a;
  font-size: 3vh;
}

#proyect-repo {
  width: 20vh;
  height: 4.5vh;
  margin-top: 0;
  font-family: 'Poppins', sans-serif;
  font-size: 2vh;
}

#my-work-title {
  text-align: center;
  font-size: 8vh;
  color: #eece1a;
}

/*Contac Me Page CSS (contact.html)*/
#contactme-title {
  font-weight: 600;
  font-size: 9.5vh;
  color: #eece1a;
  text-align: center;
}

input.form-control {
  background: transparent;
  border-top-color: transparent;
  border-right-color: transparent;
  border-left-color: transparent;
}

textarea.form-control {
  background: transparent;
  border-top-color: transparent;
  border-right-color: transparent;
  border-left-color: transparent;
}

#btn-send {
  height: 8vh;
  width: 15vh;
  font-size: 3vh;
}

#social-media-container {
  margin-top: 3%;
}

.social-media-img {
  width: 9.5vh;
  height: 9.5vh;
}

/*CSS for mobile*/
@media (max-width: 767.98px) {
  #menu-img {
    width: 7vh;
    height: 7vh;
    right: 40px;
    margin-top: 7%;
  }

  #logo {
    width: 7.5vh;
    height: 9.5vh;
  }

  .name {
    font-size: 3.5em;
  }

  #hire-me {
    margin-left: 0%;
  }

  .social-media-img {
    width: 5vh;
    height: 5vh;
  }
}

